corrected sitenav cards spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,12 +326,11 @@ align-items: center;
 }
 
 #sitenavigationcardcenter {
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
 	color: white;
 	font-weight: bold;
 	opacity: 0.6;
-	padding: 10px 10px 10px 10px;
 	background-color: #391717;
 	border-color: white;
 	border-width: 6px;
